addbooking dioalogfragment number limits