@@ -1,16 +1,15 @@
 package com.tonietorres.formenteraquotas.dialogs;
 
-import android.app.Activity;
-import android.app.DatePickerDialog;
-import android.app.DialogFragment;
-import android.content.Context;
-import android.media.MediaPlayer;
+import android.annotation.SuppressLint;
 import android.os.Bundle;
 import android.support.annotation.Nullable;
+import android.support.v4.app.Fragment;
+import android.text.InputFilter;
+import android.text.Spanned;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
-import android.widget.ImageButton;
+import android.widget.EditText;
 import android.widget.TextView;
 
 import com.tonietorres.formenteraquotas.R;
@@ -19,7 +18,7 @@ import com.tonietorres.formenteraquotas.R;
  * Created by Toni on 30/06/2018.
  */
 
-public class NewBookingFragment extends DialogFragment {
+public class NewBookingFragment extends Fragment {
 
     private OnCompleteListener listener;
     private String fecha;
@@ -27,10 +26,6 @@ public class NewBookingFragment extends DialogFragment {
     private int leftTen;
     private int leftFive;
     private int leftSix;
-    private TextView paxNine;
-    private TextView paxTen;
-    private TextView paxFive;
-    private TextView paxSix;
 
     public static interface OnCompleteListener {
         public abstract void onCompleteBooking(String fecha, String paxNine, String paxTen, String paxFive, String paxSix);
@@ -40,6 +35,7 @@ public class NewBookingFragment extends DialogFragment {
         return this.listener;
     }
 
+    /**
     @Override
     public void onAttach(Activity activity) {
         super.onAttach(activity);
@@ -49,6 +45,8 @@ public class NewBookingFragment extends DialogFragment {
             throw new ClassCastException(activity.toString() + " debe implementar OnCompleteListener!!!!!");
         }
     }
+    **/
+
     private static OnCompleteListener sDummyCallbacks = new OnCompleteListener() {
         @Override
         public void onCompleteBooking(String fecha, String paxNine, String paxTen, String paxFive, String paxSix) {
@@ -71,22 +69,23 @@ public class NewBookingFragment extends DialogFragment {
     @Nullable
     @Override
     public View onCreateView(LayoutInflater inflater, @Nullable ViewGroup container, Bundle savedInstanceState) {
-        View view = inflater.inflate(R.layout.fragment_new_booking, container, false);
-        ((TextView) view.findViewById(R.id.date)).setText(fecha);
-        ((TextView) view.findViewById(R.id.quotaHalfNine)).setText("/" + leftNine);
-        ((TextView) view.findViewById(R.id.quotaHalfTen)).setText("/" + leftTen);
-        ((TextView) view.findViewById(R.id.quotaQuarterFive)).setText("/" + leftFive);
-        ((TextView) view.findViewById(R.id.quotaHalfSix)).setText("/" + leftSix);
-        paxNine = (TextView) view.findViewById(R.id.paxHalfNine);
-        paxNine.setText("" + 0);
-        paxTen = (TextView) view.findViewById(R.id.paxHalfTen);
-        paxTen.setText("" + 0);
-        paxFive = (TextView) view.findViewById(R.id.paxQuarterFive);
-        paxFive.setText("" + 0);
-        paxSix = (TextView) view.findViewById(R.id.paxHalfSix);
-        paxSix.setText("" + 0);
+        View rootView = inflater.inflate(R.layout.fragment_new_booking, container, false);
 
-        (view.findViewById(R.id.completeBooking)).setOnClickListener(new View.OnClickListener() {
+        ((TextView) rootView.findViewById(R.id.date)).setText(fecha);
+        ((TextView) rootView.findViewById(R.id.quotaHalfNine)).setText("/" + leftNine);
+        ((TextView) rootView.findViewById(R.id.quotaHalfTen)).setText("/" + leftTen);
+        ((TextView) rootView.findViewById(R.id.quotaQuarterFive)).setText("/" + leftFive);
+        ((TextView) rootView.findViewById(R.id.quotaHalfSix)).setText("/" + leftSix);
+        final TextView paxNine =  rootView.findViewById(R.id.paxHalfNine);
+        paxNine.setText(String.valueOf(0));
+        final TextView paxTen = rootView.findViewById(R.id.paxHalfTen);
+        paxTen.setText(String.valueOf(0));
+        final TextView paxFive = rootView.findViewById(R.id.paxQuarterFive);
+        paxFive.setText(String.valueOf(0));
+        final TextView paxSix = rootView.findViewById(R.id.paxHalfSix);
+        paxSix.setText(String.valueOf(0));
+
+        (rootView.findViewById(R.id.completeBooking)).setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
                 String nine = null;
@@ -107,88 +106,159 @@ public class NewBookingFragment extends DialogFragment {
             }
         });
 
-        (view.findViewById(R.id.addHalfNine)).setOnClickListener(new View.OnClickListener() {
+        (rootView.findViewById(R.id.addHalfNine)).setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
-                int num = new Integer(paxNine.getText().toString());
+                int num = 0;
+                if (paxNine.getText().length()!=0) {
+                    num = Integer.valueOf(paxNine.getText().toString());
+                }
                 if (num < leftFive) {
                     num++;
-                    paxNine.setText("" + num);
+                    paxNine.setText(String.valueOf(num));
                 }
             }
         });
-        (view.findViewById(R.id.addHalfTen)).setOnClickListener(new View.OnClickListener() {
+        (rootView.findViewById(R.id.addHalfTen)).setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
-                int num = new Integer(paxTen.getText().toString());
+                int num = 0;
+                if (paxTen.getText().length()!=0) {
+                    num = Integer.valueOf(paxTen.getText().toString());
+                }
                 if (num < leftTen) {
                     num++;
-                    paxTen.setText("" + num);
+                    paxTen.setText(String.valueOf(num));
                 }
             }
         });
-        (view.findViewById(R.id.addQuarterFive)).setOnClickListener(new View.OnClickListener() {
+        (rootView.findViewById(R.id.addQuarterFive)).setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
-                int num = new Integer(paxFive.getText().toString());
+                int num = 0;
+                if (paxFive.getText().length()!=0) {
+                    num = Integer.valueOf(paxFive.getText().toString());
+                }
                 if (num < leftFive) {
                     num++;
-                    paxFive.setText("" + num);
+                    paxFive.setText(String.valueOf(num));
                 }
             }
         });
-        (view.findViewById(R.id.addHalfSix)).setOnClickListener(new View.OnClickListener() {
+        (rootView.findViewById(R.id.addHalfSix)).setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
-                int num = new Integer(paxSix.getText().toString());
+                int num = 0;
+                if (paxSix.getText().length()!=0) {
+                    num = Integer.valueOf(paxSix.getText().toString());
+                }
                 if (num < leftSix) {
                     num++;
-                    paxSix.setText("" + num);
+                    paxSix.setText(String.valueOf(num));
                 }
             }
         });
-        (view.findViewById(R.id.subsHalfNine)).setOnClickListener(new View.OnClickListener() {
+        (rootView.findViewById(R.id.subsHalfNine)).setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
-                int num = new Integer(paxNine.getText().toString());
+                int num = 0;
+                if (paxNine.getText().length()!=0) {
+                    num = Integer.valueOf(paxNine.getText().toString());
+                }
                 if (num > 0) {
                     num--;
-                    paxNine.setText("" + num);
+                    paxNine.setText(String.valueOf(num));
+                } else {
+                    paxNine.setText(String.valueOf(0));
                 }
             }
         });
-        (view.findViewById(R.id.subsHalfTen)).setOnClickListener(new View.OnClickListener() {
+        (rootView.findViewById(R.id.subsHalfTen)).setOnClickListener(new View.OnClickListener() {
+            @SuppressLint("SetTextI18n")
             @Override
             public void onClick(View v) {
-                int num = new Integer(paxTen.getText().toString());
+                int num = 0;
+                if (paxTen.getText().length()!=0) {
+                    num = Integer.valueOf(paxTen.getText().toString());
+                }
                 if (num > 0) {
                     num--;
                     paxTen.setText("" + num);
+                } else {
+                    paxTen.setText("" + 0);
                 }
             }
         });
-        (view.findViewById(R.id.subsQuarterFive)).setOnClickListener(new View.OnClickListener() {
+        (rootView.findViewById(R.id.subsQuarterFive)).setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
-                int num = new Integer(paxFive.getText().toString());
+                int num = 0;
+                if (paxFive.getText().length()!=0) {
+                    num = Integer.valueOf(paxFive.getText().toString());
+                }
                 if (num > 0) {
                     num--;
-                    paxFive.setText("" + num);
+                    paxFive.setText(String.valueOf(num));
+                } else {
+                    paxFive.setText(String.valueOf(0));
                 }
             }
         });
-        (view.findViewById(R.id.subsHalfSix)).setOnClickListener(new View.OnClickListener() {
+        (rootView.findViewById(R.id.subsHalfSix)).setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
-                int num = new Integer(paxSix.getText().toString());
+                int num = 0;
+                if (paxSix.getText().length()!=0) {
+                    num = Integer.valueOf(paxSix.getText().toString());
+                }
                 if (num > 0) {
                     num--;
-                    paxSix.setText("" + num);
+                    paxSix.setText(String.valueOf(num));
+                } else {
+                    paxSix.setText(String.valueOf(0));
                 }
             }
         });
-        return view;
+
+        EditText paxNineEt = rootView.findViewById(R.id.paxHalfNine);
+        paxNineEt.setFilters(new InputFilter[]{new InputFilterMinMax(0, leftNine)});
+        EditText paxTenEt = rootView.findViewById(R.id.paxHalfTen);
+        paxTenEt.setFilters(new InputFilter[]{new InputFilterMinMax(0, leftTen)});
+        EditText paxFiveEt = rootView.findViewById(R.id.paxQuarterFive);
+        paxFiveEt.setFilters(new InputFilter[]{new InputFilterMinMax(0, leftFive)});
+        EditText PaxSixEt = rootView.findViewById(R.id.paxHalfSix);
+        PaxSixEt.setFilters(new InputFilter[]{new InputFilterMinMax(0, leftSix)});
+
+
+        return rootView;
     }
 
+    class InputFilterMinMax implements InputFilter {
+        private int min, max;
+
+        public InputFilterMinMax(int min, int max) {
+            this.min = min;
+            this.max = max;
+        }
+
+        public InputFilterMinMax(String min, String max) {
+            this.min = Integer.parseInt(min);
+            this.max = Integer.parseInt(max);
+        }
+
+        @Override
+        public CharSequence filter(CharSequence source, int start, int end, Spanned dest, int dstart, int dend) {
+            try {
+                int input = Integer.parseInt(dest.toString() + source.toString());
+                if (isInRange(min, max, input))
+                    return null;
+            } catch (NumberFormatException nfe) { }
+            return "";
+        }
+
+        private boolean isInRange(int a, int b, int c) {
+            return b > a ? c >= a && c <= b : c >= b && c <= a;
+        }
+    }
 
 }
